APDS-189, APDS-188 completed a cleanup of convention warning styling for all themes to improve consistency and readability. Also addressed issue in dark scheme with drag buttons having an incorrect background.

--- a/app/styles/light.scss
+++ b/app/styles/light.scss
@@ -402,12 +402,9 @@
 .ta-scroll-window.form-control::-webkit-scrollbar-corner {
     background: transparent;
 }
-.sca-light .validation.red {
-    background-color: #FFCDD2;
-    color: #474747;
-}
+.sca-light .validation.red,
 .sca-light .validation.orange {
-    background-color: #ffecb3;
+    background-color: #f0f0f0;
     color: #474747;
 }
 .sca-light .btn-round.purple.lighten-1 {
